# cleary

./: README.md
a11y-mcp/: requirements.txt  server.py
agent/: README.md  app.py  manifest.json  pyproject.toml  requirements.txt
agent/.github/: dependabot.yml
agent/agent/: llm_caller.py
agent/agent/tools/: dice.py
agent/listeners/assistant/: assistant_thread_started.py  mcp_client.py  message.py
agent/listeners/events/: app_mentioned.py
